# ChangeLog for app-editors/emacs-vcs
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Dec 2013; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Merge changes from Portage tree.

  31 Aug 2013; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Merge changes from Portage tree.

  14 Aug 2013; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Merge changes from Portage tree.

  13 Aug 2013; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Explicitly ask for --with-sound=alsa with USE="alsa".

  12 Aug 2013; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Merge changes from Portage tree.

  02 Aug 2013; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Merge changes from Portage tree.

  14 Jul 2013; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Update URI for Xft font guide.

  11 Jul 2013; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Define EBZR_UNPACK_DIR.

  09 Jun 2013; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Merge changes from Portage tree.

  08 Jun 2013; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild,
  metadata.xml:
  Merge changes from Portage tree.

  31 Mar 2013; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Merge changes from Portage tree.

  27 Mar 2013; Ulrich Müller <ulm@gentoo.org> metadata.xml:
  Remove flag description for inotify, it is a global USE flag now.

  25 Mar 2013; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Merge changes from Portage tree.

  25 Mar 2013; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Simplify logic for configuring C source directory.

  21 Mar 2013; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild,
  metadata.xml:
  Merge changes from portage tree.

  04 Jan 2013; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild: